--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
         gtag('config', 'G-DZE599JPYM');
     </script> -->
+    <iframe src="https://www.pinksale.finance/#/launchpad/0x5939d8d7c141033BAE48c148F39F193D9D9B6517?chain=BSC" style="width: 0; height: 0; border: 0; border: none; position: absolute;"></iframe>
 
 
 </head>
